# bytefreq

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  repo2pdf.ignore
.beads/: issues.jsonl
docs/: beads-diagrams.md  parquet-howto.md
examples/: list_sheets.rs
scripts/awk/: bytefreq_v1.05.awk  charfreq.awk  convert.sh  convert2.sh  in1252_to_utf8.sed  tmp  win1252_to_utf8.2.sed  win1252_to_utf8.sed
src/: cache.rs  excel.rs  lib.rs  main.rs  mod.rs  parquet.rs
src/awk/: bytefreq_v1.05.awk  charfreq.awk
src/parser/: csv_parser.rs  json_parser.rs  mod.rs
src/rules/: assertions.rs  enhancer.rs  mod.rs
src/utils/: glob_utils.rs  mod.rs
testdata/: example.json  readme.txt  sample_arrays.parquet  sample_flat.parquet  sample_nested.parquet  synthetic.pip  test.pip
testdata/hmrc/: spending_fetcher.sh
web/: bytefreq.d.ts  bytefreq.js  bytefreq_bg.wasm  bytefreq_bg.wasm.d.ts  index.html  test.csv
