[package]
name = "bytefreq"
version = "0.3.1"
authors = ["minkymorgan@gmail.com"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
csv = "1.1"
glob = "0.3"
rand = "0.8.4"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0"
unic = "0.9"
unicode_names2 = "0.6.0"
regex = "1.5"
geonamescache = { git = "https://github.com/oyarsa/geonamescache-rs"}
lazy_static = "1.4.0"
flatten-json-object = "0.1.0"
anyhow = "1.0"

[dependencies.globset]
version = "0.4"
features = ["serde"]

[dependencies.rayon]
version = "1.7"

[dependencies.walkdir]
version = "2.3"

[[bin]]
name = "bytefreq"
path = "src/main.rs"

